test/langtools/tools/javac/switchextra/SwitchStatementBroken.out
SwitchStatementBroken.java:15:13: compiler.err.switch.mixing.case.types
- compiler.note.preview.filename: SwitchStatementBroken.java
- compiler.note.preview.recompile
1 error
